--- a/MyApplication/app/src/main/res/layout/activity_dashboard.xml
+++ b/MyApplication/app/src/main/res/layout/activity_dashboard.xml
@@ -29,6 +29,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="My Ticket App "
+                    android:textColor="@color/white"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:textSize="20dp"
+                    android:textStyle="bold">
+
+                </TextView>
+
+
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
