--- a/MyApplication/app/src/main/res/layout/fragment_details_ticket.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_details_ticket.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.DetailsTicketFragment">
@@ -11,24 +10,22 @@
         android:id="@+id/image_details_ticket"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        >
-    </ImageView>
+        app:layout_constraintTop_toTopOf="parent"></ImageView>
 
     <TextView
         android:id="@+id/tv_title_details_ticket"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/image_details_ticket"
+        android:layout_margin="@dimen/margin"
+        android:padding="@dimen/margin"
+        android:textSize="30dp"
+        android:textStyle="bold"
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:padding="@dimen/margin"
-        android:layout_margin="@dimen/margin"
-        tools:text="Bunaaaaa"
-        android:textSize="30dp"
-        android:textStyle="bold">
+        app:layout_constraintTop_toBottomOf="@id/image_details_ticket"
+        tools:text="Bunaaaaa">
 
     </TextView>
 
@@ -36,101 +33,180 @@
         android:id="@+id/constrant_layout_details_ticket"
         android:layout_width="match_parent"
         android:layout_height="90dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_title_details_ticket"
+        android:layout_margin="@dimen/margin"
+        android:clickable="true"
+        android:padding="@dimen/margin"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_margin="@dimen/margin"
-        android:padding="@dimen/margin"
-        android:clickable="true">
+        app:layout_constraintTop_toBottomOf="@id/tv_title_details_ticket">
 
-        <TextView
-            android:id="@+id/tv_date_up_details_ticket"
-            android:layout_width="wrap_content"
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/linear_layout_radiobutton"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/tv_date_down_details_ticket"
-            android:textSize="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"
-            tools:text="23 martie"
-            android:textStyle="bold"
-            android:textAllCaps="true">
-
-        </TextView>
-        <TextView
-            android:id="@+id/tv_date_down_details_ticket"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/tv_date_up_details_ticket"
-            app:layout_constraintLeft_toLeftOf="parent"
+            android:orientation="horizontal"
+            android:weightSum="10"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:textSize="15dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="15dp"
-            tools:text="19:00">
-
-        </TextView>
-
-        <TextView
-            android:id="@+id/tv_title_ticket_details_ticket_from_ticket"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/image_status_details_ticket"
-            app:layout_constraintLeft_toRightOf="@+id/tv_date_up_details_ticket"
-            tools:text="MARE MINUNE A CEVA"
-            android:textSize="20dp"
-            android:padding="5dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"
-            android:textStyle="bold"
-            android:textAllCaps="true"
-            android:maxLines="2"
-            >
-
-        </TextView>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/tv_title_ticket_details_ticket_from_ticket"
-            app:layout_constraintLeft_toRightOf="@+id/tv_date_up_details_ticket"
-            app:layout_constraintRight_toLeftOf="@+id/image_status_details_ticket"
-            android:textSize="15dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginRight="15dp"
-            tools:text="SalaPalatului, Bucuresti"
-            >
-
-        </TextView>
-
-        <ImageView
-            android:id="@+id/image_status_details_ticket"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="@dimen/margin"
-            android:layout_marginEnd="@dimen/margin"
-            android:background="@drawable/card_round"
-            android:src="@drawable/baseline_navigate_next_24"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <!-- Partea stângă -->
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="5dp"
+                android:layout_weight="3"
+                android:orientation="vertical">
+
+                <!-- RadioGroup pentru gruparea RadioButton-urilor -->
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tv_date_up_details_ticket"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:padding="3dp"
+                        android:textAllCaps="true"
+                        android:textColor="@color/lavander"
+                        android:textSize="20dp"
+                        android:textStyle="bold"
+                        tools:text="23 martie">
+
+                    </TextView>
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <!-- Explicația 4 -->
+                    <TextView
+                        android:id="@+id/tv_date_down_details_ticket"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:gravity="center_vertical"
+                        android:padding="3dp"
+                        android:textColor="@color/lavander"
+                        android:textSize="15dp"
+                        tools:text="19:00">
+
+                    </TextView>
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+            <!-- Partea dreaptă -->
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:layout_weight="6"
+                android:orientation="vertical">
+
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="2"
+                    android:orientation="vertical">
+
+                    <!-- Explicația 1 -->
+                    <TextView
+                        android:id="@+id/tv_title_ticket_details_ticket_from_ticket"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:maxLines="2"
+                        android:padding="2dp"
+                        android:textAllCaps="true"
+                        android:gravity="center"
+                        android:layout_gravity="center"
+                        android:textColor="@color/lavander"
+                        android:textSize="20dp"
+                        android:textStyle="bold"
+                        tools:text="MARE MINUNE A CEVA fggfjg fghgfjh gf gh">
+
+                    </TextView>
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tv_location_city_fr_details"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:padding="2dp"
+                        android:textColor="@color/lavander"
+                        android:textSize="15dp"
+                        tools:text="SalaPalatului, Bucuresti">
+
+                    </TextView>
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+
+                android:orientation="vertical">
+
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/image_status_details_ticket"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center"
+                        android:background="@drawable/card_round"
+                        android:src="@drawable/baseline_navigate_next_24" />
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <TextView
         android:id="@+id/detail_only"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/constrant_layout_details_ticket"
-        app:layout_constraintRight_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:padding="@dimen/margin"
         android:layout_margin="@dimen/margin"
+        android:padding="@dimen/margin"
         android:text="Detalii eveniment"
         android:textSize="25dp"
-        android:textStyle="bold">
+        android:textStyle="bold"
+        app:layout_constraintRight_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constrant_layout_details_ticket">
 
     </TextView>
 
@@ -138,18 +214,17 @@
         android:id="@+id/tv_text_details_ticket"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/detail_only"
+        android:layout_margin="@dimen/margin"
+        android:lines="100"
+        android:maxLines="100"
+        android:padding="@dimen/margin"
+        android:textAlignment="viewStart"
+        android:textSize="20dp"
+        android:textStyle="italic"
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:padding="@dimen/margin"
-        android:layout_margin="@dimen/margin"
-        tools:text="Detalii eveniment"
-        android:textSize="20dp"
-        android:maxLines="100"
-        android:lines="100">
-    </TextView>
-
-
+        app:layout_constraintTop_toBottomOf="@+id/detail_only"
+        tools:text="Detalii eveniment"></TextView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
