--- a/MyApplication/app/src/main/res/layout/fragment_payment_details_ticket.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_payment_details_ticket.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_ticket_item"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="150dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -19,24 +19,38 @@
         app:layout_marginBaseline="@dimen/margin">
 
         <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="1dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:background="@color/white"
+            >
+
+        </TextView>
+
+        <TextView
             android:id="@+id/tv_name_ticket_payment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin"
-            android:layout_marginTop="@dimen/margin"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="15dp"
+            android:padding="5dp"
             android:textColor="@color/white"
-            android:textSize="20sp"
+            android:textSize="25sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Titlu de teatru"
-            android:padding="5dp"/>
+            tools:text="Titlu de teatru" />
 
         <ImageView
             android:id="@+id/image_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin"
+            android:layout_marginTop="5dp"
+
             android:src="@drawable/baseline_location_on_24_white"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_name_ticket_payment"/>
@@ -45,6 +59,7 @@
             android:id="@+id/tv_location_ticket_payment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="7dp"
             android:layout_marginLeft="@dimen/margin"
             app:layout_constraintLeft_toRightOf="@+id/image_location"
             app:layout_constraintTop_toBottomOf="@+id/tv_name_ticket_payment"
@@ -56,6 +71,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="@dimen/margin"
             android:src="@drawable/baseline_date_range_24_white"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/image_location"/>
@@ -67,10 +84,22 @@
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:layout_marginLeft="@dimen/margin"
-            android:layout_marginTop="@dimen/margin"
+            android:layout_marginTop="9dp"
             app:layout_constraintLeft_toRightOf="@+id/image_date"
             app:layout_constraintTop_toBottomOf="@+id/tv_location_ticket_payment"
             tools:text="shshfjdsfhjhsdghjfd"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="1dp"
+           app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:background="@color/white"
+            >
+
+        </TextView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
