--- a/MyApplication/app/src/main/res/menu/nav_menu.xml
+++ b/MyApplication/app/src/main/res/menu/nav_menu.xml
@@ -24,7 +24,7 @@
       android:title="">
       <menu>
           <item
-              android:id="@+id/nav_log_out2"
+              android:id="@+id/nav_log_out"
               android:icon="@drawable/baseline_logout_24"
               android:title="Logout"/>
           <item
